<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/small_margin"
    android:orientation="horizontal"
    tools:background="@color/background">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="7dp"
        android:background="@drawable/avatar_effect"
        android:contentDescription="@string/avatar_img"
        app:srcCompat="@drawable/ic_avatar_placeholder"
        android:shape="oval"/>

    <TextView
        android:id="@+id/messengerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/avatarImageView"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_toEndOf="@+id/avatarImageView"
        android:text="@string/chat_messenger" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messengerName"
        android:layout_alignStart="@+id/messengerName"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:background="@drawable/chat_message_effect"
        android:padding="8dp"
        android:textColor="@color/chat_text"
        android:theme="@style/chat_message_style"
        tools:text="@string/filler_text" />

</RelativeLayout>