<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gpc_background"
    android:scaleType="fitXY">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/activity_button_top_margin"
            android:layout_marginBottom="@dimen/button_margin_between"
            android:background="@drawable/button_effect"
            android:drawableStart="@drawable/ic_chat"
            android:onClick="onChatClicked"
            android:text="@string/chat_button"
            android:theme="@style/main_button_style"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/button_margin_between"
            android:layout_marginBottom="@dimen/button_margin_between"
            android:background="@drawable/button_effect"
            android:drawableStart="@drawable/ic_lock"
            android:onClick="onLoginClicked"
            android:text="@string/login_button"
            android:theme="@style/main_button_style"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/button_margin_between"
            android:layout_marginBottom="@dimen/activity_button_bottom_margin"
            android:background="@drawable/button_effect"
            android:drawableStart="@drawable/ic_animation"
            android:onClick="onAnimationClicked"
            android:text="@string/animation_button"
            android:theme="@style/main_button_style"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

</RelativeLayout>
